# Movie-Recommendation-System

./: README.md  Types of recommendation systems.txt  main.py  pyproject.toml  requirements.txt
notebook/: recommend.ipynb
pickle/: vectorizer.pkl
