[project]
name = "Movie-Recommendation-System"
version = "0.1.0"
description = "Developed an NLP-based movie recommendation engine using TF-IDF, cosine similarity, and metadata feature engineering to generate personalized movie recommendations from 45K+ movies."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
